--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,7 @@
 <div class="footer">
 	<small>
-		<%= link_to "One Month Rails", "http://onemonthrails.com"%>
-		by Mattan Griffel
+		<%= link_to "One Month Rails Example", "http://onemonthrails.com"%>
+		by 
+		<%= link_to "Kurt Mansperger", "http://kurtmansperger.com"%>
 	</small>
 </div>
