--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,10 +1,13 @@
-//You could change the font
-/*$baseFontFamily: Oxygen;
-@import url(http://fonts.googleapis.com/css?family=Oxygen);*/
+/* You could change the font */
+$baseFontFamily: Nobile;
+@import url(http://fonts.googleapis.com/css?family=Nobile);
 
-$btnPrimaryBackground: green;
-$navbarBackgroundHighlight: white;
-$navbarBackground: white;
+$btnPrimaryBackground: blue;
+$navbarBackgroundHighlight: black;
+$navbarBackground: black;
+$navbarLinkColorHover: white;
+/* Link to Sass Variables
+ https://github.com/twitter/bootstrap/blob/master/less/variables.less  */
 
 @import 'bootstrap';
 
